2002-01-13  Bernhard Held  <bernhard@bernhardheld.de>

	* support/regression/Makefile: don't include test-mcs51-stack-auto in target all

2002-01-11  Johan Knol

	* Added math lib of Jesus Calvino-Fraga

2002-01-08  Bernhard Held  <bernhard@bernhardheld.de>

	* src/SDCCmain.c (processFile): fix processing of ../../src.c
	* support/regression/Makefile: new target test-mcs51-stack-auto
	* support/regression/ports/mcs51-stack-auto/spec.mk: added

2002-01-04  Bernhard Held  <bernhard@bernhardheld.de>

	* src/SDCCglue.h: printIvalCharPtr(), not printIvalChar()

2002-01-04  Bernhard Held  <bernhard@bernhardheld.de>

	* support/regression/ports/mcs51/support.c: correct setup of timer / UART

2002-01-03  Bernhard Held  <bernhard@bernhardheld.de>

	* src/SDCCsymt.c (processFuncArgs): fix #498307 by Johan

	* src/SDCCglue.h: add definition for printIvalChar()

2002-01-02  Bernhard Held  <bernhard@bernhardheld.de>

	* src/SDCCast.c: fix #498138 by Johan

	* src/SDCCglue.c: fix #498138 by Johan

2002-01-02  Bernhard Held  <bernhard@bernhardheld.de>

	* support/regression/Makefile: fix clean

	* support/regression/ports/ds390/support.c: fix transmission of last character

2001-12-29  Sandeep Dutta  <sandeep@ddi.com>

	* /sdcc/src/ds390/gen.c:
	a) improved computing address of stack variable
	b) took out some #if 0 code
	c) improved parmBytes adjustment
	d) improved genPlusIncr & genMinusIncr
	e) genCmp could generate bad code (when left assigned to DPTR)
	f) Fixed bug in hasInc

	* /sdcc/src/ds390/ralloc.c:
	a) packRegsForSupport could mess up live information (Fixed)
	b) packRegsDPTRuse could be incorrect for left & right shift

	* /sdcc/src/mcs51/ralloc.c:
	packRegsForSupport could mess up the live information (Fixed)

	* /sdcc/src/mcs51/gen.c: Fixed a bug in hasInc

	* /sdcc/src/SDCCast.c:
	can reverse a loop even if function call is present as long
	as the loop control variable is local & is not passed as parameter

2001-12-24  Sandeep Dutta  <sandeep@ddi.com>
